# PointerFinder2

./: .gitignore  App.config  CMakeLists.txt  EmulatorSelectionForm.Designer.cs  EmulatorSelectionForm.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  PointerFinder2.csproj  PointerFinder2.sln  Program.cs  README.md  RELEASE_NOTES.md  SettingsForm.Designer.cs  SettingsForm.cs
.github/workflows/: build.yml  dotnet-desktop.yml  release.yml
Core/: AppSettings.cs  ApplicationLifecycleManager.cs  CodeNoteHelper.cs  IniFile.cs  Memory.cs  MultiScanState.cs  ProgressThresholdManager.cs  ResultsManager.cs  ScanCoordinator.cs  SessionManager.cs  SettingsManager.cs  SoundManager.cs
DarkModeForms/: Base64Icons.cs  DarkModeCS.cs  FlatProgressBar.cs  Messenger.cs
DataModels/: CodeNoteSettings.cs  DebugSettings.cs  GlobalSettings.cs  PointerPath.cs  ScanParameters.cs  ScanProgressReport.cs  ScanState.cs  SessionData.cs
Emulators/: EmulatorProfile.cs  EmulatorProfileRegistry.cs  EmulatorTarget.cs  IEmulatorManager.cs  IPointerScannerStrategy.cs
Emulators/DuckStation/: DuckStationManager.cs  DuckStationScannerStrategy.cs
Emulators/EmulatorManager/: DolphinManager.cs  DuckStationManager.cs  PCSX2Manager.cs  PpssppManager.cs  RALibretroNDSManager.cs
Emulators/LiveScan/: LiveScannerStrategyBase.cs
Emulators/LiveScan/Dolphin/: DolphinLiveScannerStrategy.cs
Emulators/LiveScan/DuckStation/: DuckStationScannerStrategy.cs
Emulators/LiveScan/PCSX2/: Pcsx2ScannerStrategy.cs
Emulators/LiveScan/PPSSPP/: PpssppLiveScannerStrategy.cs
Emulators/LiveScan/RALibretro/: RALibretroNDSScannerStrategy.cs
Emulators/PCSX2/: PCSX2Manager.cs  Pcsx2ScannerStrategy.cs
Emulators/RALibretro/: RALibretroNDSManager.cs  RALibretroNDSScannerStrategy.cs
Emulators/StateBased/: StateBasedScannerStrategy.cs
Emulators/StateBased/Dolphin/: DolphinStateBasedScannerStrategy.cs
Emulators/StateBased/DuckStation/: DuckStationStateBasedScannerStrategy.cs
Emulators/StateBased/PCSX2/: Pcsx2StateBasedScannerStrategy.cs
Properties/: Resources.Designer.cs  Settings.Designer.cs  Settings.settings
UI/: AddressSearchForm.Designer.cs  AddressSearchForm.cs  BaseForm.cs  BaseForm.resx  CodeNoteConverterForm.Designer.cs  CodeNoteConverterForm.cs  CodeNoteHierarchyFixerForm.cs  DebugLogForm.Designer.cs  DebugLogForm.cs  DebugOptionsForm.Designer.cs  DebugOptionsForm.cs  DolphinFileRangeFinderForm.Designer.cs  EmulatorSelectionForm.cs  NdsStaticRangeFinderForm.Designer.cs  NdsStaticRangeFinderForm.cs  Pcsx2RamScanRangeFinderForm.Designer.cs  PpssppRamScanRangeFinderForm.cs  ScannerOptionsForm.Designer.cs  ScannerOptionsForm.cs  SettingsForm.Designer.cs  SettingsForm.cs  StateCaptureForm.Designer.cs  StateCaptureForm.cs  StateCaptureForm.resx  ThemeBlack.cs
UI/Controls/: DoubleBufferedDataGridView.cs  RangeSlider.cs
UI/Tools/: CodeNoteConverterForm.Designer.cs  CodeNoteConverterForm.cs  CodeNoteHierarchyFixerForm.Designer.cs  CodeNoteHierarchyFixerForm.cs  DolphinFileRangeFinderForm.Designer.cs  DolphinFileRangeFinderForm.cs  Pcsx2RamScanRangeFinderForm.Designer.cs  Pcsx2RamScanRangeFinderForm.cs  PpssppRamScanRangeFinderForm.Designer.cs
UI/Views/: DebugLogForm.Designer.cs  DebugLogForm.cs  SettingsForm.Designer.cs  SettingsForm.cs
resources/: resources.qrc  resources.rc
src/: main.cpp
src/Common/: EndianUtils.h  Memory.h  Memory_win.cpp
src/Core/: ArrayDetector.cpp  ArrayDetector.h  CodeNoteHelper.cpp  CodeNoteHelper.h  MultiScanState.cpp  MultiScanState.h  ProcessScanner.cpp  ProcessScanner.h  ResultsManager.cpp  ResultsManager.h  ScanCoordinator.cpp  ScanCoordinator.h  SessionManager.cpp  SessionManager.h  SettingsManager.cpp  SettingsManager.h  SoundManager.cpp  SoundManager.h  UpdateChecker.cpp  UpdateChecker.h
src/Emulators/: EmulatorProfile.h  EmulatorProfileRegistry.cpp  EmulatorProfileRegistry.h  IEmulatorManager.h  IPointerScannerStrategy.h
src/Emulators/Managers/: BaseEmulatorManager.cpp  (+13 more)
src/Models/: AppSettings.h  ArrayGroup.h  Bookmark.h  CodeNoteSettings.h  EmulatorTarget.h  GlobalSettings.cpp  GlobalSettings.h  PointerPath.cpp  PointerPath.h  ScanParameters.h  ScanProgressReport.h  ScanState.h  SessionData.h
src/UI/: MainWindow.cpp  MainWindow.h
(+51 files in other folders)
